--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <title>Recomendação de Pratos Típicos brasileiros</title>
 
 <body>
-    <header>Pratos típicos brasileiros</header>
+    <header>Pratos típicos brasileiros. Sul </header>
     <section>
         <div>
-            <h1>Sugestões de pratos típicos brasileiros por estados</h1>
+            <h1>Sugestões de pratos típicos brasileiros por estados do Sul</h1>
             <h2> Paraná</h2>
             <p>Carne de Onça</p>
         </div>
@@ -37,7 +37,13 @@
         </div>
         <div>
             <h1> Rio Grande do Sul</h1>
-            <p> </p>
+            <p>Arroz carreteiro</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://m.youtube.com/watch?v=xh0vTDxgBNA;
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
