--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 
 
-<title>Recomendação de Pratos Típicos brasileiros</title>
+<title>receitas de pratos tipicos do Sul</title>
 
 <body>
     <header>Pratos típicos brasileiros. Sul </header>
     <section>
         <div>
-            <h1>Sugestões de pratos típicos brasileiros por estados do Sul</h1>
+            <h1>Receitas por estado</h1>
             <h2> Paraná</h2>
             <p>Carne de Onça</p>
         </div>
+        <div> </div>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/G6C3G3cQ9lE?si=5H8-h1g1hRpSxVNA&quot;
                 title="YouTube video player" frameborder="0"
