--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
             <h2> Paraná</h2>
             <p>Carne de Onça</p>
         </div>
-        <div> </div>
+        <div> Ingredientes para 8 porções</div>
+        <div> 1 broa escura (pão preto fatiado)
+            1 cebola branca picadinha
+            2 dentes de alho picado
+            50 ml de azeite
+            Mostarda preta (a gosto)
+            500 g de alcatra (3 vezes moída)
+            1 maço de cebolinha verde picada
+            50 ml de cachaça (1 dose)
+            1 colher de chá de páprica doce
+            Sal a gosto
+        </div>
+        <div> Misture bem a carne moída com o sal (a gosto), cebola branca picada, alho, cachaça, páprica doce e o azeite. 
+            Depois de tudo muito bem misturado, deixe descansar por 5 minutos.
+            Distribua a carne nas fatias de broa, formando uma farta camada cobrindo toda a fatia. 
+            Polvilhe com cebolinha verde picada. 
+            Sirva acompanhada com mostarda escura e azeite.
+        </div>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/G6C3G3cQ9lE?si=5H8-h1g1hRpSxVNA&quot;
                 title="YouTube video player" frameborder="0"
@@ -29,8 +46,28 @@
         <div>
             <h1> Santa Catarina</h1>
             <p>Sopa de Agnoline</p>
-            </div>
+            </div>Ingredientes para 8 porções
         <div>
+            <div> 500 g de agnolini (ou capeletti)
+                2 dentes de alho amassados
+                2 tabletes de caldo de galinha
+                2 cenouras raladas
+                Couve flor a gosto
+                3 litros de água
+                1 cebola média picada
+                1 peito de frango cortado em cubos
+                5 batatas cortadas em cubos
+                Brócolis a gosto
+                Sal a gosto
+                Salsa e cebolinha a gosto
+            </div>
+            <div>Frite a cebola e o alho até dourar.
+                Acrescente o peito de frango e deixe dourar.
+                Acrescente os legumes, a água, o caldo de galinha e o sal, deixe cozinhar até que tudo esteja macio.
+                Coloque o agnolini e deixe cozinhar até ficar al dente( a ideia é que, embora o alimento esteja cozido, sua maciez não ultrapasse o ponto em que os dentes são convocados a mastigá-lo.).
+                Por último acrescente os temperos verdes.
+                Pode servir com queijo parmesão ralado grosso, é uma delícia, principalmente no inverno.
+            </div>
             <iframe width="560" height="315" src="https://m.youtube.com/watch?v=4L6jNgXPy58;
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
