--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <title>receitas de pratos tipicos do Sul</title>
 
 <body>
-    <header>Pratos típicos brasileiros. Sul </header>
+    <header>Pratos e receitas do sul </header>
     <section>
         <div>
             <h1>Receitas por estado</h1>
