--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 
-<title>receitas de pratos tipicos do Sul</title>
+<title>Receitas de pratos tipicos do Sul</title>
 
 <body>
     <header>Pratos e receitas do sul </header>
