--- a/index.html
+++ b/index.html
@@ -20,22 +20,28 @@
             <p>Carne de Onça</p>
         </div>
         <div> Ingredientes para 8 porções</div>
-        <div> 1 broa escura (pão preto fatiado)
-            1 cebola branca picadinha
-            2 dentes de alho picado
-            50 ml de azeite
-            Mostarda preta (a gosto)
-            500 g de alcatra (3 vezes moída)
-            1 maço de cebolinha verde picada
-            50 ml de cachaça (1 dose)
-            1 colher de chá de páprica doce
-            Sal a gosto
+        <div>
+            <ol> 
+                <li>1 broa escura (pão preto fatiado)</li>
+               <li> 1 cebola branca picadinha</li>
+               <li>2 dentes de alho picado</li>
+               <li>50 ml de azeite</li>
+               <li>Mostarda preta (a gosto)</li>
+               <li>500 g de alcatra (3 vezes moída)</li>
+                <li>1 maço de cebolinha verde picada</li>
+                <li>50 ml de cachaça (1 dose)</li>
+                <li>1 colher de chá de páprica doce</li>
+                <li>Sal a gosto</li>
+            </ol>
         </div>
-        <div> Misture bem a carne moída com o sal (a gosto), cebola branca picada, alho, cachaça, páprica doce e o azeite. 
-            Depois de tudo muito bem misturado, deixe descansar por 5 minutos.
-            Distribua a carne nas fatias de broa, formando uma farta camada cobrindo toda a fatia. 
-            Polvilhe com cebolinha verde picada. 
-            Sirva acompanhada com mostarda escura e azeite.
+        <div>
+            <ol>
+                <li>Misture bem a carne moída com o sal (a gosto), cebola branca picada, alho, cachaça, páprica doce e o azeite.</li>
+                <li>Depois de tudo muito bem misturado, deixe descansar por 5 minutos.</li>
+                <li>Distribua a carne nas fatias de broa, formando uma farta camada cobrindo toda a fatia.</li>
+                <li>Polvilhe com cebolinha verde picada.</li>
+                <li>Sirva acompanhada com mostarda escura e azeite.</li>
+            </ol>
         </div>
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/G6C3G3cQ9lE?si=5H8-h1g1hRpSxVNA&quot;
@@ -46,27 +52,33 @@
         <div>
             <h1> Santa Catarina</h1>
             <p>Sopa de Agnoline</p>
-            </div>Ingredientes para 8 porções
+            </div>Ingredientes para 8 porções</div>
         <div>
-            <div> 500 g de agnolini (ou capeletti)
-                2 dentes de alho amassados
-                2 tabletes de caldo de galinha
-                2 cenouras raladas
-                Couve flor a gosto
-                3 litros de água
-                1 cebola média picada
-                1 peito de frango cortado em cubos
-                5 batatas cortadas em cubos
-                Brócolis a gosto
-                Sal a gosto
-                Salsa e cebolinha a gosto
+            <div> 
+                <ol>
+                <li>500 g de agnolini (ou capeletti)</li>
+                <li>2 dentes de alho amassados</li>
+                <li> 2 tabletes de caldo de galinha</li>
+                <li>2 cenouras raladas</li>
+                <li>Couve flor a gosto</li>
+                <li>3 litros de água</li>
+                <li>1 cebola média picada</li>
+                <li>1 peito de frango cortado em cubos</li>
+                <li>5 batatas cortadas em cubos</li>
+                <li>Brócolis a gosto</li>
+                <li>Sal a gosto</li>
+                <li>Salsa e cebolinha a gosto</li>
+                </ol>
             </div>
-            <div>Frite a cebola e o alho até dourar.
-                Acrescente o peito de frango e deixe dourar.
-                Acrescente os legumes, a água, o caldo de galinha e o sal, deixe cozinhar até que tudo esteja macio.
-                Coloque o agnolini e deixe cozinhar até ficar al dente( a ideia é que, embora o alimento esteja cozido, sua maciez não ultrapasse o ponto em que os dentes são convocados a mastigá-lo.).
-                Por último acrescente os temperos verdes.
-                Pode servir com queijo parmesão ralado grosso, é uma delícia, principalmente no inverno.
+            <div>
+                <ol>
+                    <li>Frite a cebola e o alho até dourar.</li>
+                    <li>Acrescente o peito de frango e deixe dourar.</li>
+                    <li>Acrescente os legumes, a água, o caldo de galinha e o sal, deixe cozinhar até que tudo esteja macio.</li>
+                    <li>Coloque o agnolini e deixe cozinhar até ficar al dente( a ideia é que, embora o alimento esteja cozido, sua maciez não ultrapasse o ponto em que os dentes são convocados a mastigá-lo.).</li>
+                    <li>Por último acrescente os temperos verdes.</li>
+                    <li>Pode servir com queijo parmesão ralado grosso, é uma delícia, principalmente no inverno.</li>
+            </ol>
             </div>
             <iframe width="560" height="315" src="https://m.youtube.com/watch?v=4L6jNgXPy58;
                 title="YouTube video player" frameborder="0"
@@ -76,8 +88,34 @@
         <div>
             <h1> Rio Grande do Sul</h1>
             <p>Arroz carreteiro</p>
+            <div>Ingredientes para 6 porções</div>
         </div>
         <div>
+            <div>
+                <ol>
+                    <li>3 copos de arroz</li>
+                    <li>200 g de bacon fatiado</li>
+                    <li>1 tomate grande bem maduro</li>
+                    <li>Pimenta calabresa</li>
+                    <li>Sal</li>
+                    <li>500 g de carne seca</li>
+                    <li>200 g de calabresa</li>
+                    <li>1 cebola grande</li>
+                    <li>Salsa</li>
+                </ol>
+            </div>
+            <div>
+                <ol>
+                    <li>Cozinhe a carne seca em panela de pressão, retire, espera esfriar e desfie.</li>
+                    <li>Reserve.</li>
+                    <li>Retire a pele da calabresa e corte em cubos juntamente com o bacon.</li>
+                    <li>Corte o tomate em cubos pequenos sem as sementes bem como a cebola.</li>
+                    <li>Reserve.</li>
+                    <li>Refogue o bacon e a calabresa até ficar bem dourada, acrescentando depois a cebola, tomate, pimenta calabresa e a carne desfiada.</li>
+                    <li>Após acrescente o arroz, afogue bem, adicione a água corrigindo o sal se necessário e abaixe o fogo aguardando secar.</li>
+                    <li>Quando pronto, colocar a salsa em cima.</li>
+                </ol>
+            </div>
             <iframe width="560" height="315" src="https://m.youtube.com/watch?v=xh0vTDxgBNA;
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -85,6 +123,6 @@
         </div>
     </section>
 
-
+    
 </body>
 </html>
