--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
             <h2> Paraná</h2>
             <p>Carne de Onça</p>
         </div>
-        <div> Ingredientes para 8 porções</div>
+        <div> Ingredientes para 8 porções:</div>
         <div>
             <ol> 
-                <li>1 broa escura (pão preto fatiado)</li>
+               <li>1 broa escura (pão preto fatiado)</li>
                <li> 1 cebola branca picadinha</li>
                <li>2 dentes de alho picado</li>
                <li>50 ml de azeite</li>
                <li>Mostarda preta (a gosto)</li>
                <li>500 g de alcatra (3 vezes moída)</li>
-                <li>1 maço de cebolinha verde picada</li>
-                <li>50 ml de cachaça (1 dose)</li>
-                <li>1 colher de chá de páprica doce</li>
-                <li>Sal a gosto</li>
+               <li>1 maço de cebolinha verde picada</li>
+               <li>50 ml de cachaça (1 dose)</li>
+               <li>1 colher de chá de páprica doce</li>
+               <li>Sal a gosto</li>
             </ol>
         </div>
         <div>
+            <div>Modo de preparo</div>
             <ol>
                 <li>Misture bem a carne moída com o sal (a gosto), cebola branca picada, alho, cachaça, páprica doce e o azeite.</li>
                 <li>Depois de tudo muito bem misturado, deixe descansar por 5 minutos.</li>
@@ -52,7 +53,7 @@
         <div>
             <h1> Santa Catarina</h1>
             <p>Sopa de Agnoline</p>
-            </div>Ingredientes para 8 porções</div>
+            </div>Ingredientes para 8 porções:</div>
         <div>
             <div> 
                 <ol>
@@ -71,6 +72,7 @@
                 </ol>
             </div>
             <div>
+                <div>Modo de preparo</div>
                 <ol>
                     <li>Frite a cebola e o alho até dourar.</li>
                     <li>Acrescente o peito de frango e deixe dourar.</li>
@@ -88,7 +90,7 @@
         <div>
             <h1> Rio Grande do Sul</h1>
             <p>Arroz carreteiro</p>
-            <div>Ingredientes para 6 porções</div>
+            <div>Ingredientes para 6 porções:</div>
         </div>
         <div>
             <div>
@@ -105,6 +107,7 @@
                 </ol>
             </div>
             <div>
+                <div>Modo de preparo</div>
                 <ol>
                     <li>Cozinhe a carne seca em panela de pressão, retire, espera esfriar e desfie.</li>
                     <li>Reserve.</li>
@@ -123,6 +126,6 @@
         </div>
     </section>
 
-    
+
 </body>
 </html>
